# SmartThreadPool

./: .codecov.yml  .gitignore  .gitlab-ci.yml  README.md  config_example.yml  example.cpp  manage.sh  smart_thread_pool.h
include/: smart_thread_pool.h
tests/: CMakeLists.txt  main.cpp  pressure_taskqueue_unittest.cpp  smart_thread_pool_unittests.cpp  taskqueue_unittest.cpp
